# rdk-mfrbootenvtools

./: AVControl.c  CMakeLists.txt  LICENSE.TXT  avctrl.pc.in  kBootNotifier.c  libpwrmgr.pc.in  mfrAVCtrl.h  mfrPowerMgr.h  ubootenv.c  ubootenv.h  ubootenvtest.c
cmake/: FindTINYALSA.cmake
